# seringa

./: .env.example  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  NOTICE  README.md  partitions.csv
data/: app.js  calibragem.html  index.html  style.css
docs/: api.md  arquitetura.md  arquitetura.puml  casos-uso.puml  configuracao.md  estados-seringa.puml  fluxo-boot.puml  fluxo-login-comando.puml
main/: CMakeLists.txt  main.c
main/buttons/: buttons.c  buttons.h
main/calibration/: .gitignore  calibration.c  calibration.h
main/motor/: motor.c  motor.h  motor_config.h  motor_hw.c  motor_hw.h  motor_motion.c  motor_motion.h
main/seringa/: seringa.c  seringa.h  seringa_config.h  seringa_motion.c  seringa_motion.h
main/storage/: storage.c  storage.h
main/web/: auth.c  auth.h  routes.c  routes.h  routes_api.c  routes_api.h  routes_static.c  routes_static.h  web_server.c  web_server.h
main/wifi/: wifi.c  wifi.h
